--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -30,10 +30,11 @@
                 android:id="@+id/toggle_favorite"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_above="@+id/tv_movie_title"
+
+                android:layout_alignBottom="@+id/movie_poster"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="19dp"
-                android:layout_marginBottom="-19dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="-28dp"
                 android:background="@drawable/favorite_toggle"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
