--- a/app/src/main/res/layout/item_person.xml
+++ b/app/src/main/res/layout/item_person.xml
@@ -1,33 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="400dp"
-    android:padding="5dp"
     android:layout_margin="10dp"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:padding="5dp">
 
     <ImageView
         android:id="@+id/iv_actor_image"
         android:layout_width="match_parent"
-        android:layout_height="400dp"/>
+        android:layout_height="400dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
+        android:id="@+id/view2"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignBottom="@id/iv_actor_image"
-        android:background="@drawable/grading"/>
+        android:background="@drawable/grading"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_actor_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/txt_name_actor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/iv_actor_image"
-        tools:text="Avengers Infinity War"
-        android:maxLines="1"
+        android:layout_margin="8dp"
         android:ellipsize="end"
+        android:maxLines="1"
         android:textColor="#FFF"
-        android:layout_margin="8dp"/>
+        app:layout_constraintBottom_toBottomOf="@+id/iv_actor_image"
+        app:layout_constraintEnd_toEndOf="@+id/view2"
+        app:layout_constraintHorizontal_bias="0.019"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view2"
+        app:layout_constraintVertical_bias="0.595"
+        tools:text="Avengers Infinity War" />
 
 
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
